Copy Link Updated

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="d-flex align-items-center gap-2 mt-3">
             <i class="bi bi-copy"></i>
             <input id="copyLink" type="text" class="form-control" 
-                   value="https://pchasan80.github.io/vcard-theinjuryjusticefirm-gloria/">
+                   value="https://www.theinjuryjusticefirm.com/vcard/gloria/">
             <button class="btn btn-dark" onclick="copyText()">copy</button>
         </div>
 
